[gd_scene load_steps=14 format=3 uid="uid://dqn3g8reiy8kc"]

[ext_resource type="Script" path="res://code/main.gd" id="1_862m1"]
[ext_resource type="PackedScene" uid="uid://bamp35jrqrnh" path="res://code/player.tscn" id="1_dkm27"]
[ext_resource type="Texture2D" uid="uid://dgvw4ijxxfp8g" path="res://images/grid.jpg" id="3_8f00t"]
[ext_resource type="PackedScene" uid="uid://cceen7an80ggm" path="res://code/sniper.tscn" id="3_kdho6"]
[ext_resource type="PackedScene" uid="uid://54p22p6d2w4" path="res://code/grunt.tscn" id="3_yahs6"]
[ext_resource type="PackedScene" uid="uid://c30xo0su2aa4" path="res://code/brawler.tscn" id="4_5cubs"]
[ext_resource type="PackedScene" uid="uid://boml0r5ur2kfw" path="res://code/health_bar.tscn" id="6_rcq8m"]
[ext_resource type="Script" path="res://code/pause.gd" id="9_6gdki"]
[ext_resource type="PackedScene" uid="uid://clpwuu5ewhadp" path="res://code/health_orb.tscn" id="10_b7lj1"]
[ext_resource type="AudioStream" uid="uid://cxy5c5qn4kvgm" path="res://sounds/game_music.wav" id="10_kr7x1"]
[ext_resource type="PackedScene" uid="uid://dtwtd0qa51cnn" path="res://code/dasher.tscn" id="11_ayldk"]

[sub_resource type="Environment" id="Environment_epgnu"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 1.5
glow_levels/2 = 1.96
glow_levels/3 = 1.36
glow_levels/4 = 0.36
glow_levels/5 = 0.36
glow_intensity = 1.37
glow_strength = 1.1
glow_bloom = 0.14
glow_blend_mode = 1

[sub_resource type="Curve2D" id="Curve2D_r3of6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1920, 0, 0, 0, 0, 0, 1920, 1080, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
process_mode = 1
script = ExtResource("1_862m1")
grunt_scene = ExtResource("3_yahs6")
sniper_scene = ExtResource("3_kdho6")
brawler_scene = ExtResource("4_5cubs")
dasher_scene = ExtResource("11_ayldk")
player_scene = ExtResource("1_dkm27")
healthbar_scene = ExtResource("6_rcq8m")
orb_scene = ExtResource("10_b7lj1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_epgnu")

[node name="Background" type="ColorRect" parent="."]
modulate = Color(0.360784, 0.364706, 0.360784, 1)
z_index = -1
z_as_relative = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.101961, 0.14902, 0.2, 1)

[node name="BackgroundGrid" type="Sprite2D" parent="."]
modulate = Color(0.207843, 0.207843, 0.192157, 0.196078)
position = Vector2(960, 540)
texture = ExtResource("3_8f00t")

[node name="EnemySpawner" type="Path2D" parent="."]
curve = SubResource("Curve2D_r3of6")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawner"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_kr7x1")
volume_db = -15.928

[node name="HUD" type="Node2D" parent="."]

[node name="HP" type="Label" parent="HUD"]
visible = false
offset_left = 1620.0
offset_top = 20.0
offset_right = 1782.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 50
text = "HP:"
horizontal_alignment = 1

[node name="HPValue" type="Label" parent="HUD"]
visible = false
offset_left = 1760.0
offset_top = 20.0
offset_right = 1855.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 50
text = "100
"

[node name="XPLabel" type="Label" parent="HUD"]
modulate = Color(1.2, 1.2, 1.2, 1)
self_modulate = Color(1.2, 1.2, 1.2, 1)
offset_top = 20.0
offset_right = 1920.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 50
text = "XP: 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="ColorRect" parent="."]
process_mode = 3
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.690196)
script = ExtResource("9_6gdki")

[node name="Game Paused" type="Label" parent="Pause"]
layout_mode = 0
offset_left = 260.0
offset_top = 390.0
offset_right = 1660.0
offset_bottom = 690.0
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
theme_override_font_sizes/font_size = 200
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Esc Instruction" type="Label" parent="Pause"]
layout_mode = 0
offset_left = 260.0
offset_top = 990.0
offset_right = 1660.0
offset_bottom = 1060.0
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_font_sizes/font_size = 50
text = "Press [Esc] to resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
